styles/main.css
* {
  box-sizing: border-box;
}

:root {
  --main-bg: #333333;
  --dark-bg: #111111;
  --text-color: rgb(230, 230, 230);
  --text-accent: rgb(255, 255, 255);
  --appear-time: 1s;
  --slow-time: 2s;
}

a {
  color: var(--text-color);
}

/* Margin is set to stop white border around page,
   width and height are set to give a sized ancestor
   for relatively sized elements */

html, body {
  scroll-behavior: smooth;
  margin: 0;
  width: 100vw;
  background-color: var(--main-bg);
  font-family: "Roboto", sans-serif;
  color: var(--text-color);
}

/* Landing background image, subject to parallax
   through parallax.js (automated margin-top) */

.banner {
  top: 0;
  width: 100%;
  height: calc(100vh - 3rem);
  position: fixed;
  filter: blur(0.92vh) saturate(200%);
  background-image: url("../assets/building.jpg");
  background-attachment: scroll;
  background-size: cover;
  background-repeat: no-repeat;
  background-position-x: center;
  text-align: center;
}

.banner.parallax {
  position: absolute;
  background-attachment: fixed;
}

.banner-content.parallax {
  position: absolute;
}

/* .down-arrow {
  position: absolute;
  bottom: 0;
  padding: 0.2vh;
  font-size: 700%;
  transform: translateX(-50%);
  color: var(--text-color);
  text-decoration: none; 
} */

/* Convenient way to increase size of certain letters
   (e.g. *G*eorge *R*adojcic) */

/* .emph-font {
  font-size: 150%;
} */

/* Main content of page, overlaps banner when scrolled */

.sub-content {
  z-index: 1;
  background-color: var(--main-bg);
  position: absolute;
  width: 100%;
  top: calc(100% - 41.5pt);
}

/* Tool bar to navigate to different parts of the site
   NOTE: this has a sticky position so that it is
   accessible while scrolling */

.nav-bar {
  z-index: 2;
  text-align: center;
  user-select: none;
  position: sticky;
  top: -1px;
  width: 100%;
  height: max-content;
}

.links {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  -webkit-backdrop-filter: saturate(500%) blur(15px) brightness(100%);
  backdrop-filter: saturate(500%) blur(15px) brightness(100%);
}

.links>* {
  letter-spacing: 2pt;
  font-size: 11pt;
  text-transform: uppercase;
  flex-grow: 1;
  flex-basis: auto;
  background-color: rgba(10, 10, 10, 0.8);
  color: var(--text-accent);
  position: relative;
  text-decoration: none;
  transition: background-color 400ms linear;
  width: 100%;
}

.hamburger-container {
  display: none;
}

.sub-content-center {
  width: 100%;
  position: relative;
}

.section.invis {
  letter-spacing: 8pt;
}

.section {
  text-transform: uppercase;
  position: relative;
  transition: all var(--slow-time);
  letter-spacing: 5pt;
  font-size: 2rem;
  text-align: center;
  color: var(--text-accent);
  margin-top: 1.5em;
}

.section span {
  position: absolute;
  top: -80px;
}

.section::after {
  content: "";
  width: 60%;
  height: 0.1em;
  border-radius: 100vw;
  background-color: var(--text-accent);
  display: block;
  position: relative;
  left: 50%;
  margin-top: 0.5em;
  margin-bottom: 1em;
  transition: all var(--slow-time);
  transform: translateX(-50%) scaleX(1);
  opacity: 1;
}

.section.invis::after {
  transform: translateX(-50%) scaleX(0);
}

figure {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 10px;
  margin-top: 10px;
  transition: all var(--appear-time);
  gap: 3em;
}

.invis {
  opacity: 0;
}

.caption {
  float: left;
  margin: 0;
  padding: 30px;
  word-wrap: break-word;
  flex: 1 1 50%;
  font-size: 16pt;
  line-height: 150%;
  text-align: justify;
}

.caption h2 {
  font-size: 20pt;
  letter-spacing: 3pt;
  text-transform: uppercase;
}

.caption p {
  text-indent: 40px;
}

.fig-img img {
  width: 100%;
  display: block;
  border-radius: 16px;
  transform: perspective(1600px) rotateY(0deg);
  transition: transform 500ms ease;
}

figure h2 {
  text-align: left;
}

.reverse-fig h2 {
  text-align: right;
}

.fig-img {
  width: 100%;
  max-width: 100%;
  flex: 2 2 50%;
}

.caption ul {
  margin: 0;
}

.list {
  padding-top: 0;
}

.emph {
  font-size: 1.2em;
}

/* Main title of page */

.banner-content {
  box-sizing: border-box;
  padding: 1em;
  position: fixed;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2em;
  width: max-content;
  max-width: 100%;
  top: calc(50vh - 2rem);
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: left;
  text-shadow: 0.15em 0.15em 0.15em black;
  font-weight: bold;
  justify-content: center;
  color: var(--text-accent);
  font-size: clamp(1.2rem, 3vw, 1.7rem);
}

.main-title {
  width: max-content;
  max-width: 100%;
}

.banner-content img {
  width: 8em;
  height: 8em;
  border-radius: 50%;
  box-shadow: white 0 0 0 0.5em, black 0.15em 0.15em 0.25em 0.5em;
}

.main-title h1 {
  /* margin-bottom: 0.75em; */
  font-family: 'Cinzel', serif;
  font-size: 3em;
}

.main-title h2 {
  font-size: 1em;
}

.main-title h3 {
  font-size: 1em;
}

.main-title * {
  width: max-content;
  max-width: 100%;
  margin-top: 0.2vh;
  margin-bottom: 0.2vh;
}

.gmap {
  width: 100%;
  height: 300pt;
}

footer {
  background-color: var(--dark-bg);
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
}

footer p {
  text-indent: 0;
  text-align: center;
  font-size: 12pt;
}

@media (max-width: 1100px) {
  .caption p {
    line-height: 100%;
  }
  .reverse-fig h2 {
    text-align: left;
  }
  .section::after {
    width: 90%;
  }
  figure {
    flex-direction: column;
    margin: 0;
    padding: 0;
    gap: 0;
    /* text-align: center; */
  }
  .reverse-fig {
    flex-direction: column-reverse;
  }
  .fig-img img {
    border-radius: 0px;
  }
  .banner-content {
    flex-direction: column;
  }
}

#menu-toggle {
  display: none;
}

@media (max-width: 70ch) {
  .nav-bar {
    height: 0;
    z-index: 3;
  }
  .hamburger-container {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    width: 100%;
    /* height: 3em; */
    /* background-color: rgba(10, 10, 10, 0.9);*/
    background-color: rgba(5, 5, 5, 0.9);
    -webkit-backdrop-filter: saturate(500%) blur(15px) brightness(100%);
    backdrop-filter: saturate(500%) blur(15px) brightness(100%);
    position: absolute;
    z-index: 10;
  }
  .nav-label {
    position: relative;
    width: 100%;
    height: 100%;
  }
  .hamburger {
    --bar-width: 3rem;
    --hamburger-height: 2rem;
    --bar-height: calc(var(--hamburger-height) / 7);
    padding: 0.5rem;
  }
  .sub-content {
    top: calc(100% - 3rem);
  }
  .sub-content-center {
    margin-top: 5rem;
    z-index: 2;
  }
  .first, .second, .third {
    width: var(--bar-width);
    height: var(--bar-height);
    background-color: white;
    margin: var(--bar-height) 0;
    transition: 0.4s;
    border-radius: calc(var(--bar-height) / 2);
  }
  .links {
    flex-direction: column;
    opacity: 0;
    transform-origin: top;
    transition: transform 250ms ease-out, opacity 250ms ease-in;
    z-index: 0;
    margin-top: -1px;
    pointer-events: none;
  }
  #menu-toggle:checked+.links {
    transform: translate3d(0, 3rem, 0);
    opacity: 1;
    z-index: 3;
    pointer-events: all;
  }
  .reverse-fig h2 {
    text-align: left;
  }
  .section::after {
    width: 90%;
  }
  figure {
    flex-direction: column;
    margin: 0;
    padding: 0;
  }
  .reverse-fig {
    flex-direction: column-reverse;
  }
  .fig-img img {
    border-radius: 0px;
  }
  figure p {
    text-align: left;
  }
}

@media (prefers-reduced-motion) {
  .nav-bar>* {
    transition: none;
  }
}

@media (hover: hover) and (min-width: 1101px) and (prefers-reduced-motion: no-preference) {
  .fig-img img:hover {
    transform: perspective(1600px) rotateY(5deg);
  }
  .reverse-fig .fig-img img:hover {
    transform: perspective(1600px) rotateY(-5deg);
  }
}

@media (hover: hover) {
  .links a:hover {
    background-color: rgba(40, 40, 40, 0.75);
  }
}

li {
  padding-left: 1em;
  font-size: 16pt;
  text-align: left;
  line-height: 2.5em;
  list-style-type: none;
  position: relative;
}

li::before {
  font-family: 'Font Awesome 5 Free';
  font-size: 1.5em;
  font-weight: 900;
  position: absolute;
  margin-left: -1.5em;
}

.phone::before {
  content: '\f879 ';
}

.fax::before {
  content: '\f1ac ';
}

.address::before {
  content: '\f3c5 ';
}

.email::before {
  content: '\f1d8 ';
}

